crates/cli/tests/snapshots/run_deno_test__deno__handles_process_exit_code_zero.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno install
▪▪▪▪ deno:exitCodeZero
stdout
▪▪▪▪ deno:exitCodeZero (100ms)

Tasks: 1 completed
 Time: 100ms

stderr
