crates/cli/tests/snapshots/run_deno_test__deno__handles_unhandled_promise.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno install
▪▪▪▪ deno:unhandledPromise
stdout
▪▪▪▪ deno:unhandledPromise (100ms)
stderr
error: Uncaught (in promise) "Oops"
Error: task_runner::run_failed

  × Task deno:unhandledPromise failed to run.
  ╰─▶ Process deno failed: exit code 1
