crates/cli/tests/snapshots/run_deno_test__deno__passes_args_through.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno:passthroughArgs
Args: -aBc --opt value --optCamel=value foo 'bar baz' --opt-kebab 123
▪▪▪▪ deno:passthroughArgs (100ms)

Tasks: 1 completed
 Time: 100ms



