crates/cli/tests/snapshots/run_deno_test__deno__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno install
▪▪▪▪ deno:runFromWorkspace
<WORKSPACE>
▪▪▪▪ deno:runFromWorkspace (100ms)

Tasks: 1 completed
 Time: 100ms
