crates/cli/tests/snapshots/run_deno_test__deno__runs_standard_script.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno install
▪▪▪▪ deno:standard
stdout
▪▪▪▪ deno:standard (100ms)

Tasks: 1 completed
 Time: 100ms

stderr
