crates/cli/tests/snapshots/run_deno_test__deno__supports_top_level_await.snap
---
source: crates/cli/tests/run_deno_test.rs
expression: assert.output()
---
▪▪▪▪ deno install
▪▪▪▪ deno:topLevelAwait
before
awaiting
after
▪▪▪▪ deno:topLevelAwait (100ms)

Tasks: 1 completed
 Time: 100ms
